# W-B-hacakathon---CompetitorAnalysis

./: .gitignore  COMMIT_EDITMSG  LICENSE  README.md  config  index  packed-refs  pyproject.toml  report.md
configuring_a_three_agent_competitive_intelligence_crew/: README.md
configuring_a_three_agent_competitive_intelligence_crew/src/configuring_a_three_agent_competitive_intelligence_crew/: crew.py  main.py
logs/refs/heads/: main
logs/refs/remotes/origin/: HEAD  main
objects/pack/: pack-078a52bbfa6f6eebe54a8a3d46dcfa8f0a12b903.idx  pack-078a52bbfa6f6eebe54a8a3d46dcfa8f0a12b903.pack
refs/heads/: main
src/competitor_analysis/: crew.py  main.py  test_tool.py
src/competitor_analysis/config/: agents.yaml  tasks.yaml
src/competitor_analysis/server/: stagehand_server.py
src/competitor_analysis/tools/: stagehand_browser_tool.py
src/configuring_a_three_agent_competitive_intelligence_crew/config/: agents.yaml  tasks.yaml
