[project]
name = "configuring_a_three_agent_competitive_intelligence_crew"
version = "0.1.0"
description = "configuring_a_three_agent_competitive_intelligence_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
configuring_a_three_agent_competitive_intelligence_crew = "configuring_a_three_agent_competitive_intelligence_crew.main:run"
run_crew = "configuring_a_three_agent_competitive_intelligence_crew.main:run"
train = "configuring_a_three_agent_competitive_intelligence_crew.main:train"
replay = "configuring_a_three_agent_competitive_intelligence_crew.main:replay"
test = "configuring_a_three_agent_competitive_intelligence_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
