[project]
name = "competitor_analysis"
version = "0.1.0"
description = "competitor-analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "streamlit>=1.46.1",
]

[project.scripts]
competitor_analysis = "competitor_analysis.main:run"
run_crew = "competitor_analysis.main:run"
train = "competitor_analysis.main:train"
replay = "competitor_analysis.main:replay"
test = "competitor_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
